    literally called "mlunit".
  - Additional failontestfail option in build.xml lets user choose whether the
    target should fail when tests failed or not.

  - Fix: matlabcommand.xml's logfile option is not actually optional
  - Fix: assert_equals judges Inf and Inf as not equal
  - Fix: stack expansion for syntax errors forgets to remove .m file extension


mlUnit 1.6.9 (2015-06-17)
-------------------------
  
  - Remove deprecate Ant code handling for matlab.bat or delegate matlab.exe
  - Add matlab.root Ant property for easier MATLAB referencing
  - Reliably fetch MATLAB executable from the system path if neither matlab.root
    nor matlab.exec given.
  - Allow single test suite execution on console for function test suites.
    Works by calling the test suite directly on the console. Not genericly
    possible for class-based test suites, as each class' constructor handles
    inheritance itself.
  - Allow single test suite execution on console with recursive_test_run.
  - Allow relative path names with recursive_test_run. [B#23]
  - Test reports get only generated if target directory argument is provided.
  - Remove quasi-reflective test name check, as we only instantiate test objects
    with automatically retrieved test cases. Also, it messed up when we tried to
    use it on methods inherited from test_case, e.g. suite_set_up, which often
    would only be known after the child constructor, not after the parent
    constructor.
  - Remove mlunit_reflect.
  - Added suite setup and teardown handling. These execute once before any
    test of a suite executes, and after all tests of a suite have executed,
    respectively. If suite_set_up and suite_tear_down succeed without error,
    the other set_up/tear_down/test functions execute as usual. However, if
    suite_set_up fails, test execution is omitted. If suite_set_up or
    suite_tear_down fails, another test is added to the results in order to