@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_failure_output" errors="1" failures="31" tests="32" time="0.484" hostname="unknown" timestamp="2015-06-22T21:36:41">
+<testsuite name="test_failure_output" errors="1" failures="31" tests="32" time="0.546" hostname="unknown" timestamp="2015-06-23T09:58:37">
   <properties/>
   <testcase classname="test_failure_output" name="test_empty">
     <failure><![CDATA[Expected empty expression was actually: 3.
@@ -29,7 +29,7 @@ In test_failure_output.m at line 36]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_double_empty">
     <failure><![CDATA[Data not equal:
-  Expected : zeros(1,0)
+  Expected : []
   Actual   : 3
 In test_failure_output.m at line 40]]></failure>
   </testcase>
